[package]
name = "gatech-dep-graph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest={version="0.11.10", features=["json"] }
anyhow="1.0.57"
regex="1.5.5"
futures = "0.3.1"
async-std="1.11.0"
serde={ version = "1.0", features = ["derive"] }
serde_json="1.0"
dotenv="0.15"
